# algorithms

./: .gitignore  Makefile  pyproject.toml
tests/: test_sum.py
